--- a/primeiro-programa-java/.classpath
+++ b/primeiro-programa-java/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="lib" path="lib/poi-5.0.0.jar"/>
 	<classpathentry kind="lib" path="lib/commons-math3-3.0.jar"/>
 	<classpathentry kind="lib" path="lib/commons-collections4-4.4.jar"/>
+	<classpathentry kind="lib" path="lib/gson-2.8.6.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
