--- a/enviando-email/pom.xml
+++ b/enviando-email/pom.xml
@@ -28,11 +28,19 @@
       <scope>test</scope>
     </dependency>
     
-        <dependency>
+    <dependency>
       <groupId>com.sun.mail</groupId>
       <artifactId>javax.mail</artifactId>
       <version>1.6.2</version>
     </dependency>
+    
+    <dependency>
+      <groupId>com.itextpdf</groupId>
+      <artifactId>itextpdf</artifactId>
+      <version>5.5.13.1</version>
+    </dependency>    
+    
+    
     
     
     
